--- a/src/main/testresources/com/projects/taxicorporation/client/AddCarDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/AddCarDark.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.ManageManagerController">
+<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.AddCarController">
    <children>
-      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0" style="-fx-background-color: dimgray;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -27,21 +27,29 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
                <children>
-                  <Label layoutX="117.0" layoutY="27.0" text="Zarządzaj menadżerami">
+                  <Label layoutX="166.0" layoutY="28.0" text="Dodaj samochód">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="37.0" layoutY="121.0" text="Wybierz Menadżera z listy">
+                  <Label layoutX="64.0" layoutY="143.0" text="Model pojazdu">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="251.0" layoutY="121.0" text="Przypisz Menadżera do oddziału">
+                  <TextField fx:id="carModelField" layoutX="64.0" layoutY="171.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="214.0" text="Rok produkcji">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="yearOfProductionField" layoutX="64.0" layoutY="234.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="273.0" text="Oddział">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="departmentChoiceBox" layoutX="64.0" layoutY="293.0" prefHeight="25.0" prefWidth="390.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
