--- a/src/main/testresources/com/projects/taxicorporation/client/DeleteCarDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/DeleteCarDark.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.ManageManagerController">
+<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.DeleteCarController">
    <children>
-      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0" style="-fx-background-color: dimgray;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -27,21 +27,23 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
                <children>
-                  <Label layoutX="117.0" layoutY="27.0" text="Zarządzaj menadżerami">
+                  <Label layoutX="166.0" layoutY="28.0" text="Usuń samochód">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="37.0" layoutY="121.0" text="Wybierz Menadżera z listy">
+                  <Label layoutX="64.0" layoutY="107.0" text="Wybierz oddział z listy">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="251.0" layoutY="121.0" text="Przypisz Menadżera do oddziału">
+                  <ChoiceBox fx:id="chooseDepartmentChoiceBox" layoutX="64.0" layoutY="127.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="205.0" text="Wybierz samochód">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <ChoiceBox fx:id="chooseCarChoiceBox" layoutX="61.0" layoutY="225.0" prefHeight="25.0" prefWidth="390.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
