--- a/src/main/testresources/com/projects/taxicorporation/client/DriverShowMap.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/DriverShowMap.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.ShowMapController">
+<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.DriverShowMapController">
    <children>
       <SplitPane dividerPositions="0.2862903225806452" prefHeight="470.0" prefWidth="750.0">
         <items>
@@ -36,14 +36,6 @@
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Button mnemonicParsing="false" onMouseClicked="#onChangeThemeButtonClicked" style="-fx-background-color: lightgrey;" text="Light/Dark">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
                      </cursor>
                   </Button>
                </children></AnchorPane>
