--- a/src/main/testresources/com/projects/taxicorporation/client/LoginFormDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/LoginFormDark.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane fx:id="buttonsAnchorPane" prefHeight="400.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.LoginFormController">
    <children>
-      <SplitPane dividerPositions="0.5" prefHeight="400.0" prefWidth="583.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.5" prefHeight="400.0" prefWidth="583.0" style="-fx-background-color: dimgray;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
             <ImageView fitHeight="398.0" fitWidth="270.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true">
                <image>
