--- a/src/main/testresources/com/projects/taxicorporation/client/RegisterFormDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/RegisterFormDark.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.RegisterFormController">
    <children>
-      <SplitPane dividerPositions="0.4014084507042254" prefHeight="400.0" prefWidth="712.0">
+      <SplitPane dividerPositions="0.4014084507042254" prefHeight="400.0" prefWidth="712.0" style="-fx-background-color: dimgray;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
                <children>
