--- a/src/main/testresources/com/projects/taxicorporation/client/RenameOrDeleteDepartmentDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/RenameOrDeleteDepartmentDark.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.AddManagerController">
+<AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.RenameOrDeleteDepartmentController">
    <children>
-      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.32620320855614976" prefHeight="470.0" prefWidth="750.0" style="-fx-background-color: dimgray;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -27,45 +27,35 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
                <children>
-                  <Label layoutX="101.0" layoutY="27.0" text="Uzupełnij dane menadżera">
+                  <Label layoutX="166.0" layoutY="28.0" text="Uzupełnij dane">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="64.0" layoutY="143.0" text="Imię">
+                  <Label layoutX="63.0" layoutY="89.0" text="Wybierz oddział z listy">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="nameField" layoutX="64.0" layoutY="163.0" />
-                  <Label layoutX="294.0" layoutY="143.0" text="Oddział">
+                  <ChoiceBox fx:id="chooseDepartmentChoiceBox" layoutX="64.0" layoutY="110.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="152.0" text="Nazwa oddziału">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ChoiceBox fx:id="departmentChoiceBox" layoutX="294.0" layoutY="163.0" prefWidth="150.0" />
-                  <Label layoutX="64.0" layoutY="214.0" text="Nazwisko">
+                  <TextField fx:id="departmentNameField" layoutX="64.0" layoutY="171.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="214.0" text="Miejscowość oddziału">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="surnameField" layoutX="64.0" layoutY="234.0" />
-                  <Label layoutX="294.0" layoutY="214.0" text="Numer telefonu">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                  <TextField fx:id="phoneNumberField" layoutX="294.0" layoutY="234.0" />
-                  <Label layoutX="64.0" layoutY="288.0" text="Login">
+                  <TextField fx:id="departmentCityField" layoutX="64.0" layoutY="234.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Label layoutX="64.0" layoutY="273.0" text="Ulica Oddziału">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="loginField" layoutX="64.0" layoutY="308.0" />
-                  <Label layoutX="294.0" layoutY="288.0" text="Hasło">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                  <TextField fx:id="passwordField" layoutX="294.0" layoutY="308.0" />
+                  <TextField fx:id="departmentStreetField" layoutX="64.0" layoutY="293.0" prefHeight="25.0" prefWidth="390.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
