--- a/src/main/testresources/com/projects/taxicorporation/client/ShowMapDark.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/ShowMapDark.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.ShowMapController">
    <children>
-      <SplitPane dividerPositions="0.2862903225806452" prefHeight="470.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.2862903225806452" prefHeight="470.0" prefWidth="750.0" style="-fx-background-color: dimgray;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
