--- a/src/main/resources/com/projects/taxicorporation/client/ChooseRoad.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ChooseRoad.fxml
@@ -11,7 +11,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Label layoutX="45.0" layoutY="32.0" text="Panel Klienta">
+                  <Label layoutX="45.0" layoutY="32.0" text="Panel Kierowcy">
                      <font>
                         <Font name="Arial Bold" size="19.0" />
                      </font>
@@ -32,6 +32,9 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <Button layoutX="230.0" layoutY="286.0" mnemonicParsing="false" text="Zaakceptuj" />
+                  <Label layoutX="212.0" layoutY="115.0" text="Dostępne rezerwacje" />
+                  <ChoiceBox layoutX="193.0" layoutY="144.0" prefWidth="150.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
