Implemented add driver backend functionallity

--- a/src/main/resources/com/projects/taxicorporation/client/AddDriver.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/AddDriver.fxml
@@ -37,35 +37,35 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="64.0" layoutY="163.0" />
+                  <TextField fx:id="nameField" layoutX="64.0" layoutY="163.0" />
                   <Label layoutX="294.0" layoutY="143.0" text="Oddział">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ChoiceBox layoutX="294.0" layoutY="163.0" prefWidth="150.0" />
-                  <Label layoutX="64.0" layoutY="214.0" text="Nazwisko">
+                  <ChoiceBox fx:id="departmentChoiceBox" layoutX="294.0" layoutY="163.0" prefWidth="150.0" />
+                  <Label layoutX="64.0" layoutY="214.0" text="Email">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="64.0" layoutY="234.0" />
+                  <TextField fx:id="emailField" layoutX="64.0" layoutY="234.0" />
                   <Label layoutX="294.0" layoutY="214.0" text="Numer telefonu">
                      <font>
                         <Font size="14.0" />
                      </font></Label>
-                  <TextField layoutX="294.0" layoutY="234.0" />
+                  <TextField fx:id="phoneNumberField" layoutX="294.0" layoutY="234.0" />
                   <Label layoutX="64.0" layoutY="288.0" text="Login">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="64.0" layoutY="308.0" />
+                  <TextField fx:id="loginField" layoutX="64.0" layoutY="308.0" />
                   <Label layoutX="294.0" layoutY="288.0" text="Hasło">
                      <font>
                         <Font size="14.0" />
                      </font></Label>
-                  <TextField layoutX="294.0" layoutY="308.0" />
+                  <PasswordField fx:id="passwordField" layoutX="294.0" layoutY="308.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
