--- a/src/main/resources/com/projects/taxicorporation/client/ChooseRoad.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ChooseRoad.fxml
@@ -32,7 +32,7 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="230.0" layoutY="286.0" mnemonicParsing="false" text="Zaakceptuj" />
+                  <Button onMouseClicked="#onSubmitCourseClicked" layoutX="230.0" layoutY="286.0" mnemonicParsing="false" text="Zaakceptuj" />
                   <Label layoutX="212.0" layoutY="115.0" text="Dostępne rezerwacje" />
                   <ChoiceBox layoutX="193.0" layoutY="144.0" prefWidth="150.0" />
                </children></AnchorPane>
