--- a/src/main/resources/com/projects/taxicorporation/client/DriverMap.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/DriverMap.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.sothawo.mapjfx.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -47,7 +48,15 @@
                         </cursor>
                     </Button>
                 </children></AnchorPane>
-            <MapView fx:id="mapView" prefHeight="468.0" prefWidth="542.0" />
+            <StackPane prefHeight="200.0" prefWidth="100.0">
+                <children>
+                    <MapView fx:id="mapView" prefHeight="468.0" prefWidth="542.0" />
+                    <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#onSubmitReservationButtonClicked" style="-fx-background-color: rgb(211,20,20);" text="Zarezerwuj" textFill="WHITE" StackPane.alignment="BOTTOM_CENTER">
+                     <StackPane.margin>
+                        <Insets bottom="10.0" />
+                     </StackPane.margin></Button>
+                </children>
+            </StackPane>
         </items>
       </SplitPane>
    </children>
