--- a/src/main/testresources/com/projects/taxicorporation/client/ChooseRoad.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/ChooseRoad.fxml
@@ -32,9 +32,9 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="230.0" layoutY="286.0" mnemonicParsing="false" text="Zaakceptuj" />
+                  <Button layoutX="230.0" layoutY="286.0" mnemonicParsing="false" onMouseClicked="#onSubmitCourseClicked" text="Zaakceptuj" />
                   <Label layoutX="212.0" layoutY="115.0" text="Dostępne rezerwacje" />
-                  <ChoiceBox layoutX="193.0" layoutY="144.0" prefWidth="150.0" />
+                   <ListView fx:id="courseListView" layoutX="36.0" layoutY="144.0" onMouseClicked="#onCourseClicked" prefHeight="250.0" prefWidth="460.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
