--- a/src/main/testresources/com/projects/taxicorporation/client/ClientPanel.fxml
+++ b/src/main/testresources/com/projects/taxicorporation/client/ClientPanel.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.text.*?>
+
 
 <AnchorPane fx:id="buttonsAnchorPane" prefHeight="470.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projects.taxicorporation.client.ClientPanelController">
     <children>
@@ -38,13 +40,13 @@
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="startPointField" layoutX="190.0" layoutY="187.0" prefHeight="25.0" prefWidth="266.0" />
+                        <ChoiceBox fx:id="startPointChoiceBox" layoutX="190.0" layoutY="187.0" prefHeight="25.0" prefWidth="266.0" />
                         <Label layoutX="116.0" layoutY="264.0" text="Dokąd">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="destinationField" layoutX="188.0" layoutY="265.0" prefHeight="25.0" prefWidth="266.0" />
+                        <ChoiceBox fx:id="destinationChoiceBox" layoutX="188.0" layoutY="265.0" prefHeight="25.0" prefWidth="266.0" />
                     </children>
                 </AnchorPane>
             </items>
